[tool.poetry]
name = "lsns"
version = "0.1.0"
description = ""
authors = ["Oleg Maslov <maslovoa.ge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"



[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
